# Smart-Farm-Fsociety-Group

./: Bestouv.c  Bestouv.h  LISTEVIEWAPPAREIL.c  LISTEVIEWAPPAREIL.h  Makefile.am  README.md  absence.c  absence.h  absence_cyrine.c  absence_cyrine.h  ajouter.c  animal.c  animal.h  callbacks.c  callbacks.h  callbacks_cyrine.c  callbacks_cyrine.h  callbacks_hazem.c  callbacks_nasri.c  callbacks_nasri.h  callbackschayma.c  capteur.c  capteur.h  liste_ouvriers.c  liste_ouvriers.h  liste_ouvriers_cyrine.c  main.c  nbr_de_troupeaux_nasri.c  nbr_de_troupeaux_nasri.h  panne.c  panne.h  reservation.c  reservation.h
